# workScheduler

./: .gitignore  README.md  devteam.txt
trunk/dataset/.test/: desiredSchedules.csv  schedule.csv  teamRepository.csv
trunk/dataset/converted/: grafik-CSV.csv  grafik-ODS.csv  grafik-XLS.csv  grafik-XLSX.csv
trunk/dataset/input/admin/: employeeRepository.csv  teamRepository.csv  teamSchedule.csv
trunk/dataset/input/employees/: desiredSchedules.csv
trunk/dataset/output/: schedule.csv
trunk/dataset/unconverted/: grafik-CSV.csv  grafik-ODS.ods  grafik-XLS.xls  grafik-XLSX.xlsx
trunk/project/: CMakeLists.txt
trunk/project/program/: CMakeLists.txt
trunk/project/program/include/: fileStream.h
trunk/project/program/include/database/: connectionProvider.h  databaseManager.h
trunk/project/program/include/file_stream/: fileStream.h
trunk/project/program/src/: fileStream.cpp  main.cpp
trunk/project/program/src/database/: connectionProvider.cpp  databaseManager.cpp
trunk/project/program/src/file_stream/: fileStream.cpp
trunk/project/program/test/: fileStreamTest.cpp  master.cpp
