cmake_minimum_required(VERSION 3.4)
project(workScheduler)
enable_language(CXX)
IF (WIN32)
    set(THIRD_PARTY_DIR ${CMAKE_SOURCE_DIR}/thirdparty/windows)
    set(CMAKE_CXX_FLAGS /W4)
ELSE()
    set(THIRD_PARTY_DIR ${CMAKE_SOURCE_DIR}/thirdparty/linux)
    set(CMAKE_CXX_FLAGS "-Wall -Wpedantic -Wextra -Weffc++ -Werror")
ENDIF()
set(Boost_INCLUDE_DIR ${THIRD_PARTY_DIR}/boost/boost_1_60_0/include)
add_subdirectory(library)
add_subdirectory(program)
enable_testing()

